Fix broken links/references

--- a/docs/Rules Reference Guide.adoc
+++ b/docs/Rules Reference Guide.adoc
@@ -285,7 +285,7 @@ Some card abilities may cause a character to become a copy of another character.
 === Corrupted
 Corrupted is a keyword ability. A character with the corrupted keyword enters play tainted. Abilities cannot be triggered from a corrupted character receiving the tainted status token from this keyword, as that card enters play already with that status.
 
-*Related:* <<Tainted&comma; Tainted Status Token>>, <<Status Token>>
+*Related:* <<_tainted_tainted_status_token>>, <<Status Token>>
 
 === Cost
 A card's cost is the numerical value that dictates how much fate must be paid to play the card from a player's hand or provinces.
@@ -399,7 +399,7 @@ The disguised keyword appears on unique characters. When a character is played u
 - A character played using this keyword enters play ready and in the same location as the non-unique character it is replacing.
 
 === Dishonored, Dishonored Status Token
-See <<Personal Honor&comma; Personal Dishonor>>.
+See <<_personal_honor_personal_dishonor>>.
 
 === Drawing cards
 When a player is instructed to draw one or more cards, those cards are drawn from the top of his or her conflict deck.
@@ -530,7 +530,7 @@ Glory is a character statistic that represents a character's reputation, and how
 - While a character is honored or dishonored, that character's glory will modify its military and political skill.
 - A player counts the glory value of each ready character he or she controls whenever a glory count is required.
 
-*Related*: <<Personal Honor&comma; Personal Dishonor>>, <<Glory Count>>
+*Related*: <<_personal_honor_personal_dishonor>>, <<Glory Count>>
 
 === Glory Count
 When the players are asked to perform a glory count, each player or each team counts the total glory value among the ready characters they control and adds 1 to the total for each ring in their claimed ring pool. The player or team with the highest total wins the glory count.
@@ -540,7 +540,7 @@ When the players are asked to perform a glory count, each player or each team co
 - Some card abilities may require the players to perform a glory count. Glory counts required by card abilities are made in the same manner, and the ability will detail how to process the result. Such counts do not affect the status of the Imperial Favor, unless the ability text causes the Imperial Favor status to change.
 - Other card abilities may require players to count current glory among their characters, or a subset of their characters. This is different from a glory count, and rings in a player's claimed ring pool are not added. For such card abilities, players count current glory among their specified characters in the same way they would count current [military] or [political] skill.
 
-*Related*: <<Imperial Favor>>, <<Current>>
+*Related*: <<_imperial_favor_imperial_favor_contest>>, <<Current>>
 
 === Holding
 When a holding is turned faceup in a player's province, its game text becomes active and that holding is considered to be "in play." As long as a holding remains faceup in a player's province, that player can use abilities or benefit from game text on that holding.
@@ -567,7 +567,7 @@ amount of honor a player has at any given time is represented (as open informati
 *Related*: <<Winning the Game>>
 
 === Honored, Honored Status Token
-See <<Personal Honor&comma; Personal Dishonor>>.
+See <<_personal_honor_personal_dishonor>>.
 
 === Immune
 If a card is immune to a specified set of effects (for example, "immune to ring effects" or "immune to event card effects"), it cannot be targeted or affected by effects that belong to that set.
@@ -787,7 +787,7 @@ In the enlightenment format, where each player has two opponents, a player's car
 In the team conquest format, where all players can control participating characters in a conflict, a player's card ability that refers to "your opponent" or "an opponent" refers to either player on the opposing team, chosen when resolving the card ability.
 
 === Ordinary
-See <<Personal Honor&comma; Personal Dishonor>>.
+See <<_personal_honor_personal_dishonor>>.
 
 === Own, Ownership
 See <<Control and Ownership>>.
@@ -813,7 +813,7 @@ There are times in the game at which a player has an option to perform an act (s
 - Other game sequences in which players have the option to pass continue until both players pass consecutively. If the first player passes, and the second player does not, the opportunity returns to the first player in the sequence. The sequence only ends when both players have passed in succession. (In other words, passing in such a sequence does not prevent a player from re-entering the sequence should the opponent not also pass in succession.)
 - When passing an opportunity to declare a conflict, a player is not required to specify which type of conflict he or she is passing.
 
-=== Personal Honor&comma; Personal Dishonor
+=== Personal Honor, Personal Dishonor
 Personal honor is a means of tracking the honored or dishonored status of individual character cards. Each character exists in one of three states:
 
 - Honored
@@ -1010,7 +1010,7 @@ condition.
 replacement effect would not change the game state, that
 replacement effect cannot be initiated.
 
-*Related*: <<Would>>
+*Related*: <<The word "Would">>
 
 === Resolve an Ability
 
@@ -1216,7 +1216,7 @@ ability is the player who makes the selection.
 - For all selections, an option that has the potential to change
 the game state must be chosen, if able.
 
-*Related*: <<Initiating Abilities>>
+*Related*: <<Initiating Abilities / Playing Cards>>
 
 === Self-referential Text
 When a card's ability text refers to itself ("this character," "this
@@ -1349,15 +1349,14 @@ declare 1 or more defenders during conflicts at that province.
 Dishonored status tokens can be placed on provinces by card
 abilities.
 - A status token cannot be removed from a card unless it is a
-character whose personal honor is changed (see <<Personal
-Honor&comma; Personal Dishonor>> on page 15) or a card effect
+character whose personal honor is changed (see <<_personal_honor_personal_dishonor>> on page 15) or a card effect
 specifically moves or removes that status token.
 - If a card effect "moves" or "discards" an honored or
 dishonored status token from a character, that character has
 not been honored or dishonored for the purposes of card
 abilities, even though it loses its honored/dishonored status.
 
-See <<Personal Honor&comma; Personal Dishonor>>.
+See <<_personal_honor_personal_dishonor>>.
 
 === Stronghold
 A player's stronghold is considered in play. A stronghold card
@@ -1403,7 +1402,7 @@ tokens.
 
 *Related*: Gains, Give, Loses
 
-=== Tainted&comma; Tainted Status Token
+=== Tainted, Tainted Status Token
 The tainted status token allows characters and provinces to
 become tainted by the corrupting presence of Jigoku.
 
@@ -1607,7 +1606,7 @@ cost payment or the consequences of any other ability
 interactions.
 - A triggered ability can only be initiated if its cost (after
 modifiers) has the potential to be paid in full. +
-*Related:* <<Ability>>, <<Action>>, <<Cost>>, <<Effects>>, <<Interrupts>>, <<Limits of Triggered Abilities>>, <<Reactions>>, <<Target>>
+*Related:* <<Ability>>, <<_action_action_ability>>, <<Cost>>, <<Effects>>, <<Interrupts>>, <<Limits of Triggered Abilities>>, <<Reactions>>, <<Target>>
 - A triggering condition is a condition which dictates when an ability
 can be triggered. On card abilities, the triggering condition is the
 element of the ability that references such a condition, which most
