--- a/docs/Rules Reference Guide.adoc
+++ b/docs/Rules Reference Guide.adoc
@@ -1959,7 +1959,7 @@ alternates back and forth between the players, in player order.
 With his or her opportunity to act, a player may do one of the
 following:
 
-- Play one [.font-color: green]#card# from their provinces [.font-color: green]#or hand#.
+- Play one card from their provinces or hand.
 - Trigger an eligible action ability.
 - Discard a duplicate of a character from his or her hand or from
 one of his or her provinces to place 1 fate on a copy of that
@@ -2445,18 +2445,18 @@ If this process is completed, a duel has been initiated. Otherwise,
 the duel fails to initiate and cannot resolve.
 
 
-=== [.font-color: green]#Resolve the duel#
+=== Resolve the duel
 A duel is resolved during the successful resolution of any triggered
 ability that instructs players to "resolve the duel," or that their
 "character challenges the opponent's character to a [type] duel."
 To resolve a duel, perform the following steps:
 
-==== [.font-color: green]#D.2. Establish the challenge#
+==== D.2. Establish the challenge
 The process of initiating the duel (in step D.1) will have identified
 the two characters that are involved in the duel, as well as the kind
 of duel that will take place. This statistic ([military] skill, [political] skill, or glory) will be used to determine the results of the duel.
 
-==== [.font-color: green]#D.3. Duel honor bid#
+==== D.3. Duel honor bid
 Each player secretly selects a number from 1 to 5 on his or her
 honor dial as his or her honor bid for this duel. Once both players
 have confirmed that they are ready, proceed to the next step.
@@ -2464,20 +2464,20 @@ have confirmed that they are ready, proceed to the next step.
 - In the skirmish format, players cannot select a number higher
 than 3 on their honor dial.
 
-==== [.font-color: green]#D.4. Reveal honor dials#
+==== D.4. Reveal honor dials
 The players simultaneously reveal their bids.
 
 Once a player reveals an honor bid, the dial is placed next to the
 player's stronghold or conflict deck and remains as a reference
 point until the next honor bid occurs.
 
-==== [.font-color: green]#D.5. Transfer honor#
+==== D.5. Transfer honor
 The player with the higher honor bid must give an amount of honor
 to the player with the lower honor bid that is equal to the
 difference between the two bids. If the bids are equal, no honor is
 transferred during this step.
 
-==== [.font-color: green]#D.6. Calculate dueling statistic#
+==== D.6. Calculate dueling statistic
 The process of initiating the duel (in step D.1) will have established
 which statistic ([military] skill, [political] skill, or glory) is being used to
 determine the results of the duel. Each player calculates the
@@ -2491,7 +2491,7 @@ this step is treated as the skill value of a single character for the
 purposes of determining duel results. Those characters win or
 lose the duel together
 
-===== [.font-color: green]#D.7. Add honor bid, compare values, and determine result#
+===== D.7. Add honor bid, compare values, and determine result
 Each player calculates their duel total and compares it with that of
 their opponent to determine the results.
 
@@ -2511,13 +2511,13 @@ duel's loser.
 - If the duel totals are the same, neither character is the duel's
 winner and neither character is the duel's loser.
 
-==== [.font-color: green]#D.8. Apply duel results#
+==== D.8. Apply duel results
 The ability that initiated the duel (in step D.1) specified the
 consequences of this duel for the winning and/or losing characters,
 or for the player(s) controlling those characters. Apply those
 consequences during this step.
 
-==== [.font-color: green]#D.9. Duel ends#
+==== D.9. Duel ends
 This step formalizes the end of the duel. Return to the action
 window in which the duel was initiated, with the next player in the
 sequence of actions having the next opportunity to act.
@@ -2566,17 +2566,16 @@ origin.
 
 //todo: Add images with reference to card anatomy
 
->>>
 
-== [.font-color: green]#Appendix III: Card Clarifications#
+== Appendix III: Card Clarifications
 
 This section provides answers to a number of common questions
 that are asked about cards in the game. These answers are
 organized by the expansion and collector number of the card
 whose rules interaction has raised the question.
 
-=== [.font-color: green]#Core Set#
-==== [.font-color: blue.underline]#Shameful Display# [.font-color: green]#(24)#
+=== Core Set
+==== Shameful Display (24)
 
 - Neither the honoring nor the dishonoring aspect of Shameful
 Display's ability is dependent upon the other. Additionally,
