--- a/docs/Rules Reference Guide.adoc
+++ b/docs/Rules Reference Guide.adoc
@@ -137,7 +137,7 @@ Some card abilities can "cancel" other card or game effects. Cancel abilities in
 - If an effect is canceled, that effect is no longer imminent, and further interrupts (including cancels) cannot be initiated in reference to the canceled effect.
 - If the effects of an ability are canceled, the ability is still considered to have been used, and any costs have still been paid.
 - If the effects of an event card are canceled, the card is still considered to have been played, and it is still placed in its owner's discard pile.
-- If a ring effect that is resolving for winning a conflict is  canceled, the ring is still claimed.
+- If a ring effect that is resolving for winning a conflict is canceled, the ring is still claimed.
 
 === Cannot
 The word "cannot" is absolute, and cannot be countermanded by
@@ -181,9 +181,8 @@ A player's stronghold card signals which clan a player has chosen as the primary
 - An "in-clan" card bears a clan symbol that matches the clan symbol on its controller's stronghold card.
 - An "out-of-clan" card bears one or more clan symbols that do not match the clan symbol on its controller's stronghold card, and does not bear a clan symbol that matches the clan symbol on its controller's stronghold card.
 ** If a player does not have a stronghold card, "in-clan" and "out-of-clan" determination is defined by the clan selected during deckbuilding to be that player's primary clan.
-*Related*: <<Deckbuilding>>
 
-//todo: This area needs work/images
+*Related*: <<Deckbuilding>>
 
 [cols=".^2,^.^1a,.^2a",frame=none,grid=cols]
 |===
@@ -261,7 +260,7 @@ A card's owner is the player who included the card as a part of his or her deck 
 
 - By default, cards enter play under their owner's control. Some abilities may cause cards to change control during a game.
 - A player controls the cards in his or her out-of-play game areas (such as the hand, the dynasty and conflict decks, and the dynasty and conflict discard piles).
-- If a card would enter an out-of-play area of a player who does not own the card, the card is placed in its owner's equivalent out-of-play area instead. (For all associated card ability and  framework effect purposes, the card is considered to have entered that opponent's out-of-play area, and only the physical placement of the card is adjusted.)
+- If a card would enter an out-of-play area of a player who does not own the card, the card is placed in its owner's equivalent out-of-play area instead. (For all associated card ability and framework effect purposes, the card is considered to have entered that opponent's out-of-play area, and only the physical placement of the card is adjusted.)
 - If a participating character changes control during a conflict, it is considered participating in the same conflict on the side of its new controller.
 - When a character changes control while it is in play, it remains in the same state as it was before (i.e., bowed or ready, participating or at home, etc.), and is now under the new player's control.
 - Attachments on a card that changes control do not themselves change control.
@@ -606,7 +605,7 @@ The cards (generally characters and attachments) that a player controls in his o
 *Related*: <<Enters Play>>, <<Leaves Play>>, <<Play and Put into Play>>
 
 === Influence, Influence Cost
-Influence is a deckbuilding resource that is indicated by a player's chosen stronghold for that deck. Many conflict deck cards have an  influence cost, which makes them eligible for selection as an out- of-clan card.
+Influence is a deckbuilding resource that is indicated by a player's chosen stronghold for that deck. Many conflict deck cards have an influence cost, which makes them eligible for selection as an out- of-clan card.
 
 In the skirmish format, each player cannot spend more than 6 influence to include out-of-clan cards in their deck.
 
@@ -640,7 +639,7 @@ Interrupts and reactions may be used throughout this process as normal, should t
 
 === In Player Order
 If the players are instructed to perform a sequence "in player order," the first player performs their part of the sequence first, followed by the player to the first player's left and continuing in clockwise order.
-- If a sequence performed in player order does not conclude after each player has performed their aspect of the sequence once, the sequence of opportunities continues to alternate from player to player in  clockwise order until it is complete.
+- If a sequence performed in player order does not conclude after each player has performed their aspect of the sequence once, the sequence of opportunities continues to alternate from player to player in clockwise order until it is complete.
 
 === Interrupts
 An interrupt is a triggered ability whose text is prefaced by a boldface "*Interrupt*:" precursor. An interrupt ability interrupts the resolution of its triggering condition, sometimes canceling or changing the resolution of that condition. Always resolve interrupts to a triggering condition before resolving the consequences of the triggering condition itself.
@@ -649,7 +648,7 @@ Unlike actions, which are resolved during action windows, an interrupt may be in
 
 When a triggering condition initiates (but before it completes its resolution), an interrupt window for that triggering condition opens.
 
-Within the interrupt window, the first player always has the first opportunity to initiate an eligible interrupt (to the triggering condition that opened the window), or pass. Opportunities to initiate an eligible interrupt, or pass, continue to alternate between the  players until all players consecutively pass, at which point the interrupt window closes. Passing does not prevent a player from initiating an eligible interrupt later in that same interrupt window.
+Within the interrupt window, the first player always has the first opportunity to initiate an eligible interrupt (to the triggering condition that opened the window), or pass. Opportunities to initiate an eligible interrupt, or pass, continue to alternate between the players until all players consecutively pass, at which point the interrupt window closes. Passing does not prevent a player from initiating an eligible interrupt later in that same interrupt window.
 
 Once an interrupt window closes, further interrupts to that specific triggering condition cannot be initiated. The triggering condition now completes its resolution (as long as its effects have not been canceled).
 
@@ -684,7 +683,7 @@ If a card leaves play, the following consequences occur simultaneously with the 
 === Legendary X
 Some characters are shrouded in legend and mystery. These characters are given the Legendary keyword. It consists of the word "Legendary" followed by a variable, numerical value X, that can be 0 or higher.
 
-Legendary X means: "This card enters play with X fate on it and cannot have more than X fate on it. Fate cannot be added to this card. It cannot be put into play or prevented from leaving play by card effects, and cannot enter play outside of the Dynasty phase."
+Legendary X means: "This card enters play with X fate on it and cannot have more than X fate on it. Fate cannot be added to this card. It cannot be put into play or prevented from leaving play by card effects, and cannot enter play outside the Dynasty phase."
 
 === Limited
 Limited is a keyword ability. *As an additional cost to play a card with the limited keyword, a player must bow their role card, this means that* no more than one card in total with the limited keyword can be played by each player each round. Cards played from hand and played from a player's provinces are restricted by and count toward this limit.
@@ -1419,7 +1418,7 @@ province, its controller must lose 1 honor.
 unless a card ability discards (or moves) its status token. If a tainted
 province is turned faceup or facedown, do not discard its tainted
 status token.
-A-  character's tainted status has no bearing on its personal honor,
+- A character's tainted status has no bearing on its personal honor,
 and a tainted character can be honored or dishonored the same as
 an untainted character.
 
