--- a/docs/Rules Reference Guide.adoc
+++ b/docs/Rules Reference Guide.adoc
@@ -594,17 +594,18 @@ Whenever a player wishes to play a card or initiate a triggered ability, that pl
 
 These are:
 
-1. Check play restrictions and verify the existence of eligible targets: can the card be played, or the ability initiated, at this time? If the play restrictions are not met, or there are not enough eligible targets for the ability, the process cannot proceed.
-2. Determine the cost (or costs, if multiple costs are required) to play the card or initiate the ability. If it is established that the cost (taking modifiers into account) can be paid, proceed with the remaining steps of this sequence. +
+. Check play restrictions and verify the existence of eligible targets: can the card be played, or the ability initiated, at this time? If the play restrictions are not met, or there are not enough eligible targets for the ability, the process cannot proceed.
+. Determine the cost (or costs, if multiple costs are required) to play the card or initiate the ability. If it is established that the cost (taking modifiers into account) can be paid, proceed with the remaining steps of this sequence. +
 
 Once each of the preliminary confirmations has been made, follow these steps, in order:
 
-3. Apply any modifiers to the cost(s).
-4. Pay the cost(s).
-5. Choose target(s), if applicable. Any pre-effect instructions to "select" among multiple options in the ability are made at this time as well.
-6. The card attempts to enter play, or the effects of the ability attempt to initiate. An interrupt ability that cancels this initiation may be used at this time.
-7. The card enters play, or the effects of the ability (if not canceled in step 6) complete their initiation, and resolve.
-8. At this time the card is considered "played" or the ability "triggered."
+[start=3]
+. Apply any modifiers to the cost(s).
+. Pay the cost(s).
+. Choose target(s), if applicable. Any pre-effect instructions to "select" among multiple options in the ability are made at this time as well.
+. The card attempts to enter play, or the effects of the ability attempt to initiate. An interrupt ability that cancels this initiation may be used at this time.
+. The card enters play, or the effects of the ability (if not canceled in step 6) complete their initiation, and resolve.
+. At this time the card is considered "played" or the ability "triggered."
 
 Interrupts and reactions may be used throughout this process as normal, should their triggering conditions occur.
 
@@ -781,7 +782,7 @@ Any character that has been declared as an attacker or defender for a conflict i
 === Pass
 There are times in the game at which a player has an option to perform an act (such as taking an action, triggering an ability, or executing a game step), or to pass. Passing in such a situation forfeits the player's right to perform that act in that moment.
 
-- The first player to pass the opportunity to use an action or play a card during the dynasty phase forfeits the opportunity to do so for the remainder of the phase, and gains one fate.
+- The first player to pass the opportunity to use an action or play a card during the dynasty phase forfeits the opportunity to do so for the remainder of the phase.
 - Other game sequences in which players have the option to pass continue until both players pass consecutively. If the first player passes, and the second player does not, the opportunity returns to the first player in the sequence. The sequence only ends when both players have passed in succession. (In other words, passing in such a sequence does not prevent a player from re-entering the sequence should the opponent not also pass in succession.)
 - When passing an opportunity to declare a conflict, a player is not required to specify which type of conflict he or she is passing.
 
@@ -833,34 +834,43 @@ In most game formats, players are eliminated from the game when certain conditio
  ** If a player reaches zero honor, their stronghold province is immediately broken.
  ** Broken stronghold provinces are immune to all card effects.
 
-[ WORKING ENTRY POINT ] +
-Pride
-Pride is a keyword ability. After a character with the pride keyword
+=== Pride
+
+- Pride is a keyword ability. After a character with the pride keyword
 wins a conflict, honor that character. After a character with the
 pride keyword loses a conflict, dishonor that character.
-The pride keyword resolves after the character wins or loses a
+
+- The pride keyword resolves after the character wins or loses a
 conflict, before reactions to that conflict being won or loss can
 be triggered.
-Printed
-The word printed refers to the text, characteristic, icon, or value
+
+=== Printed
+
+- The word printed refers to the text, characteristic, icon, or value
 that is physically printed on the card.
-Priority of Simultaneous Resolution
-If a single effect affects multiple players simultaneously, but the
+
+=== Priority of Simultaneous Resolution
+
+- If a single effect affects multiple players simultaneously, but the
 players must individually make choices to resolve the effect, the
 first player chooses first, followed by his or her opponent. Once all
 necessary choices have been made, the effect resolves
 simultaneously upon all affected entities.
-If the resolution of two or more delayed effects or forced
+
+- If the resolution of two or more delayed effects or forced
 abilities would resolve at the same time, the first player decides
 the order in which the abilities resolve, regardless of who
 controls the cards bearing the conflicting abilities.
 
+- If two or more constant abilities and/or lasting effects can be
+applied simultaneously, they are. 
 
-If two or more constant abilities and/or lasting effects can be
-applied simultaneously, they are. If two or more constant
+- If two or more constant
 abilities and/or lasting effects cannot be applied
 simultaneously, the first player determines the order in which
 they are applied.
+
+[ WORKING ENTRY POINT ] +
 Provinces, Province Cards
 A player's provinces represent the lands under their domain. When
 a province is attacked and turned faceup, the card represents what
@@ -2216,39 +2226,74 @@ formalizes the end of the round. Any active "until the end of the
 round" lasting effects expire at this time.
 After this step is complete, play proceeds to the beginning of the
 dynasty phase of the next game round.
-Duel Timing
-D.1 Initiate a duel.
-D.2 Establish the challenge.
-D.3 Duel honor bid.
-D.4 Reveal honor dials.
-D.5 Transfer honor.
-D.6 Calculate dueling statistic.
-D.7 Calculate duel total and determine result.
-D.8 Apply duel results.
-D.9 Duel ends.
-D.1. Initiate a duel
-When a card ability initiates a duel, part of the cost of that ability
-may use the phrase, "initiate a [type] duel." This opens the duel
-timing window.
-To initiate a duel, the player resolving the card ability must choose
-two characters to duel against each other: one they control and
-one controlled by an opponent. The following parameters exist on
-which characters can be chosen for the duel:
-One character must be controlled by the player whose card
-ability initiates the duel, and one character must be controlled
-by an opponent of that player.
-If a duel is initiated during a conflict, both characters chosen
-must be participating.
-If a duel is initiated by an ability on a character card, that
-character is automatically involved in the duel. Some abilities
-use the phrase "this character initiates" as a reminder of this.
-That character is not considered to be chosen as a target of the
-duel, as it is already involved.
-During a conflict, a duel can only be initiated by an ability
-on a character card if that character is participating in the
-conflict.
-If this process is completed, a duel has been initiated. Otherwise,
-the duel fails to initiate and cannot resolve.
+
+=== Duel Timing
+
+=== D.1 Initiate a duel.
+
+When a card ability initiates a duel, part of the cost of that ability may use the phrase, “initiate a [type] duel." This opens the duel timing window.
+
+To initiate a duel, the player resolving the card ability must choose two characters to duel against each other: one they control and one controlled by an opponent. The following parameters exist on which characters can be chosen for the duel:
+
+- One character must be controlled by the player whose card ability initiates the duel, and one character must be controlled by an opponent of that player.
+- If a duel is initiated during a conflict, both characters chosen must be participating.
+- If a duel is initiated by an ability on a character card, that character is automatically involved in the duel. Some abilities use the phrase “this character initiates" as a reminder of this. That character is not considered to be chosen as a target of the duel, as it is already involved.
+- During a conflict, a duel can only be initiated by an ability on a character card if that character is participating in the conflict.
+- If this process is completed, a duel has been initiated. Otherwise, the duel fails to initiate and cannot resolve.
+
+Resolve the duel
+A duel is resolved during the successful resolution of any triggered ability that instructs players to “resolve the duel," or that their “character challenges the opponent’s character to a [type] duel." A duel resolution is split into 3 steps taken in sequence. The steps are:
+
+- *Challenge:* during this step the rules of the duel are defined
+- *Focus:* each player involved in the duel selects and reveals their honor bid for the duel, then the result of the duel is determined
+- *Strike:* the consequences of the duel are applied
+
+There are no action windows during a duel, so players are not able to initiate actions or play characters and attachments from their hands during the resolution of a duel. 
+
+During a duel each player can trigger special abilities that affect the duel itself. Those abilities are marked as *Duel Challenge*, *Duel Focus*, and *Duel Strike*. Each player can trigger a single effect for each phase. For example, you could trigger both a *Duel Focus* and a *Duel Strike*, but you cannot trigger two *Duel Focus* abilities, regardless of their names. Whenever those abilities refer to characters they refer to the characters involved in the duel.
+
+Players can also trigger applicable interrupt and/or reaction abilities during a duel.
+
+All abilities triggered during a Duel follow the normal order of priority, with the First Player having the first opportunity to trigger an ability.
+
+=== D.2 Challenge.
+
+The process of initiating the duel (in step D.1) will have identified:
+- the two characters that are involved in the duel. Those characters are the contestants in this duel. The side that initiated the duel is the challenger, the other side is the challenged.
+- the kind of duel that will take place. This statistic (MIL skill, POL skill, or glory) will be used to determine the results of the duel.
+
+After this, *Duel Challenge* abilities can be triggered. Those abilities can replace the contestants or the statistic of the duel, among other effects.
+
+
+=== D.3 Focus.
+
+Each player secretly selects a number from 1 to 5 on their honor dial as their honor bid for this duel. Once both players have confirmed that they are ready, proceed to the next step.
+
+The players simultaneously reveal their bids. Once a player reveals an honor bid, the dial is placed next to the player’s stronghold or conflict deck and remains as a reference point until the next honor bid occurs.
+
+After revealing their bids *Duel Focus* abilities can be triggered. Those abilities can modify the bids or dials, or they can modify the calculations that define the duel results, among other effects.
+
+The player with the higher honor bid must give an amount of honor to the player with the lower honor bid that is equal to the difference between the two bids. If the bids are equal, no honor is transferred.
+
+In the Challenge step of the duel (D.2) the statistic of the duel was defined. Check their printed value for that statistic. If multiple characters are involved in the duel on the same side, add their dueling statistics together. Those characters win or lose the duel together
+
+Each player calculates their duel total by adding their statistic to their honor bid plus any other modifier that apply specifically to this duel. Then compare the total with that of their opponent to determine the duel results.
+
+The character whose controller has the higher duel total is the duel’s winner.
+The character whose controller has the lower duel total is the duel’s loser.
+If the duel totals are the same, neither character is the duel’s winner and neither character is the duel’s loser.
+
+=== D.4 Strike.
+
+The ability that initiated the duel (in step D.1) specified the consequences of this duel for the winning and/or losing characters, or for the player(s) controlling those characters. 
+
+Before applying the duel consequences, *Duel Strike* abilities can be triggered. Then, apply the duel consequences.
+
+
+=== D.5 Duel ends.
+
+This step formalizes the end of the duel. Return to the action window in which the duel was initiated, with the next player in the sequence of actions having the next opportunity to act.
+
 
 34
 
