--- a/docs/Emerald Edict.adoc
+++ b/docs/Emerald Edict.adoc
@@ -18,14 +18,13 @@ Version {revnumber}, {revdate}
 '''
 
 [.text-center]
-You may not include any splash banned cards in your deck as part of a splash. +
 You may not include any banned cards in your deck. +
 You may only include one restricted card in your deck.
 [.text-center]
 Changes to the previous version are marked in [.new]#bold and green.#
 
 
-[cols="1a,1a,1a",stripes=none,frame=none,grid=none]
+[cols="1a,1a",stripes=none,frame=none,grid=none]
 |===
 |
 :show-link-uri!:
@@ -71,30 +70,6 @@ Changes to the previous version are marked in [.new]#bold and green.#
 * https://www.emeralddb.org/card/adorned-temple[Adorned Temple]
 * https://www.emeralddb.org/card/sacred-sanctuary[Sacred Sanctuary, role="new line-through"]
 * https://www.emeralddb.org/card/togashi-mitsu-2[Togashi Mitsu 2, role=new]
-
-
-|
-:show-link-uri!:
-== Splash Banned Cards
-=== image:mons/crab.svg[width=20] [.crab]#Crab#
-* https://www.emeralddb.org/card/fight-on[Fight On!]
-* https://www.emeralddb.org/card/reprieve[Reprieve]
-
-=== image:mons/crane.svg[width=20] [.crane]#Crane#
-* https://www.emeralddb.org/card/festival-of-the-fortunes[Festival for the Fortunes]
-* https://www.emeralddb.org/card/return-the-offense[Return the Offense]
-
-=== image:mons/dragon.svg[width=20] [.dragon]#Dragon#
-* https://www.emeralddb.org/card/indomitable-will[Indomitable Will, role="new line-through"]
-* https://www.emeralddb.org/card/mirumotos-fury[Mirumoto's Fury]
-* https://www.emeralddb.org/card/shoshi-ni-kie[Shoshi ni Kie]
-
-=== image:mons/lion.svg[width=20] [.lion]#Lion#
-* https://www.emeralddb.org/card/fan-of-command[Fan of Command]
-* https://www.emeralddb.org/card/glorious-victory[Glorious Victory]
-* https://www.emeralddb.org/card/heroic-resolve[Heroic Resolve]
-* https://www.emeralddb.org/card/renowned-singer[Renowned Singer]
-
 
 |
 :show-link-uri!:
@@ -158,21 +133,6 @@ a|
 * https://www.emeralddb.org/card/swift-magistrate[Swift Magistrate]
 * https://www.emeralddb.org/card/utaku-tetsuko[Utaku Tetsuko]
 
-a|
-:show-link-uri!:
-== Splash Banned Cards
-=== image:mons/phoenix.svg[width=20] [.phoenix]#Phoenix#
-* https://www.emeralddb.org/card/display-of-power[Display of Power]
-
-=== image:mons/unicorn.svg[width=20] [.unicorn]#Unicorn#
-* https://www.emeralddb.org/card/favored-mount[Favored Mount]
-* https://www.emeralddb.org/card/force-of-the-river[Force of the River]
-* https://www.emeralddb.org/card/gaijin-customs[Gaijin Customs]
-* https://www.emeralddb.org/card/scouted-terrain[Scouted Terrain]
-* https://www.emeralddb.org/card/steed-of-the-steppes[Steed of the Steppes]
-* https://www.emeralddb.org/card/talisman-of-the-sun[Talisman of the Sun]
-* https://www.emeralddb.org/card/lay-of-the-land[Lay of the Land]
-
 |
 :show-link-uri!:
 == Banned Cards
@@ -190,11 +150,6 @@ a|
 
 a|
 :show-link-uri!:
-== Restricted cards
-
-a|
-:show-link-uri!:
-== Splash Banned Cards
 
 |===
 
