--- a/docs/Emerald Edict.adoc
+++ b/docs/Emerald Edict.adoc
@@ -161,8 +161,12 @@ All the cards listed here rotated out of the valid card pool and are not allowed
 Emerald Legacy tournaments. Unlike Banned cards, which might be unbanned at some point,
 rotated cards will never return to the valid card pool.
 
+Rotated are all cards of the https://www.emeralddb.org/cards?cycle=core[original FFG Core Set] as well as the https://www.emeralddb.org/cards?cycle=imperial[complete Imperial Cycle].
+In addition, the following cards are rotated because they were replaced with slightly different cards in https://www.emeralddb.org/cards?pack=restoration-of-balance[Restoration of Balance].
+
 [cols="1a,1a,1a",stripes=none,frame=none,grid=none]
 |===
+
 |
 :show-link-uri!:
 === image:mons/neutral.svg[width=20] [.neutral]#Neutral#
@@ -173,11 +177,9 @@ rotated cards will never return to the valid card pool.
 === image:mons/crab.svg[width=20] [.crab]#Crab#
 * https://www.emeralddb.org/card/common-cause[Common Cause]
 * https://www.emeralddb.org/card/favourable-dealbroker[Favourable Dealbroker]
-* https://www.emeralddb.org/card/iron-mine[Iron Mine]
 * https://www.emeralddb.org/card/kuni-wasteland[Kuni Wasteland]
 
 === image:mons/crane.svg[width=20] [.crane]#Crane#
-* https://www.emeralddb.org/card/asahina-artisan[Asahina Artisan]
 * https://www.emeralddb.org/card/daidoji-uji-2[Daidoji Uji 2]
 * https://www.emeralddb.org/card/kakita-s-final-stance[Kakita's Final Stance]
 * https://www.emeralddb.org/card/the-wealth-of-the-crane[The Wealth of the Crane]
@@ -199,8 +201,6 @@ rotated cards will never return to the valid card pool.
 :show-link-uri!:
 === image:mons/phoenix.svg[width=20] [.phoenix]#Phoenix#
 * https://www.emeralddb.org/card/embrace-the-void[Embrace the Void]
-* https://www.emeralddb.org/card/forgotten-library[Forgotten Library]
-* https://www.emeralddb.org/card/grasp-of-earth[Grasp of Earth]
 * https://www.emeralddb.org/card/jurojin-s-curse[Jurōjin's Curse]
 * https://www.emeralddb.org/card/spell-scroll[Spell Scroll]
 
